--- a/src/main/resources/templates/purchaseSubscription.html
+++ b/src/main/resources/templates/purchaseSubscription.html
@@ -1,18 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-  <link rel="stylesheet" href="/css/stylePayment.css" />
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <!--<link rel="stylesheet" href="/css/checkout_index.css" />-->
   <title>Title</title>
 
   <style>
+    .row {
+      display: -ms-flexbox; /* IE10 */
+      display: flex;
+      -ms-flex-wrap: wrap; /* IE10 */
+      flex-wrap: wrap;
+      margin: 0 -16px;
+      margin-top: 30px;
+      margin-bottom: 50px;
+      margin-left: 50px;
+
+    }
+
+    .col-25 {
+      -ms-flex: 25%; /* IE10 */
+      flex: 25%;
+    }
+
+    .col-50 {
+      -ms-flex: 50%; /* IE10 */
+      flex: 50%;
+    }
+
+    .col-75 {
+      -ms-flex: 75%; /* IE10 */
+      flex: 75%;
+    }
+
+    .col-25,
+    .col-50,
+    .col-75 {
+      padding: 0 16px;
+    }
+
+    .container {
+      background-color: black;
+      padding: 5px 20px 15px 20px;
+      border-radius: 3px;
+      outline-color: darkred;
+      outline-style: solid;
+    }
+
+    input[type=text] {
+      width: 100%;
+      margin-bottom: 20px;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+    }
+
+    label {
+      margin-bottom: 10px;
+      display: block;
+    }
+
+    .icon-container {
+      margin-bottom: 20px;
+      padding: 7px 0;
+      font-size: 24px;
+    }
+
+    .continueButton {
+      background-color: white;
+      color: black;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      width: 100%;
+      border-radius: 3px;
+      cursor: pointer;
+      font-size: 17px;
+    }
+
+    .continueButton p{
+      background-color: red;
+    }
+
+    .continueButton:hover {
+      background-color: white;
+    }
+
+    span.price {
+      float: right;
+      color: grey;
+    }
+
+    /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
 
 
-    .error-message {
+
+    h1{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: white;
+      font-weight: bold;
+      -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
+    }
+
+    label, li, ul{
+
+      font-family: poppins;
+      font-weight: bold;
+      font-size: 15px;
+      color: white;
+    }
+
+    h3, h2{
+      font-family: poppins;
+      font-weight: bold;
+      color: white;
+    }
+
+  </style>
+
+  <style>
+    .message{
       color: red;
-      font-size: 14px;
-      margin-top: 5px;
+      font-weight: bold;
+      font-family: poppins;
+      font-size: 15px;
     }
 
     body{
@@ -30,156 +149,321 @@
       z-index: -1;
     }
 
+    label, input, option, select{
+
+      font-family: poppins;
+      font-size: 15px;
+      font-weight: bold;
+    }
+
+    h4, h3, b,span{
+      font-family: poppins;
+      font-weight: bold;
+    }
+
+    .error-message {
+      color: red;
+      font-size: 14px;
+      margin-top: 5px;
+    }
+
+    p{
+      color: red;
+      font-family: poppins;
+      font-weight: bold;
+    }
   </style>
+
 </head>
 <body>
 
-<div th:if="${#ctx.session.loggedInUser != null}">
+<div id="background"></div>
 
-  <div id="background"></div>
-
-<form class="credit-card"  method="post" action="/addSubscriptionForUser" onsubmit="return validateSubscription()">
-  <div class="form-header">
-    <h4 class="title">Credit card detail</h4>
-  </div>
-
-  <div class="form-body" >
-    <!-- Card Number -->
-    <p>
-    <input type="text" th:value="${cardNumber}" class="card-number" id="cardNumber" name="cardNumber" placeholder="Card Number">
-      <span id="cardNumber-error" class="error-message"></span>
-    </p>
-    <!-- Date Field -->
-    <div class="date-field">
-      <div class="month">
-        <p>
-        <select th:value="${Month}" name="Month" id="Month">
-          <option value="january">January</option>
-          <option value="february">February</option>
-          <option value="march">March</option>
-          <option value="april">April</option>
-          <option value="may">May</option>
-          <option value="june">June</option>
-          <option value="july">July</option>
-          <option value="august">August</option>
-          <option value="september">September</option>
-          <option value="october">October</option>
-          <option value="november">November</option>
-          <option value="december">December</option>
-        </select>
-          <span id="month-error" class="error-message"></span>
-        </p>
-      </div>
-      <div class="year">
-        <p>
-        <select th:value="${Year}" name="Year" id="Year">
-          <option value="2025">2025</option>
-          <option value="2026">2026</option>
-          <option value="2027">2027</option>
-          <option value="2028">2028</option>
-          <option value="2029">2029</option>
-          <option value="2030">2030</option>
-          <option value="2031">2031</option>
-          <option value="2032">2032</option>
-          <option value="2033">2033</option>
-        </select>
-          <span id="year-error" class="error-message"></span>
-        </p>
-      </div>
-    </div>
-
-    <!-- Card Verification Field -->
-    <div class="card-verification">
-      <div class="cvv-input">
-        <p>
-        <input type="text" th:value="${cvv}" placeholder="CVV" name="cvv" id="cvv">
-        </p>
-      </div>
-      <div class="cvv-details">
-
-        <span id="cvv-error" class="error-message"></span>
-      </div>
-    </div>
-
-
-    <!-- Buttons -->
-    <button type="submit" class="proceed-btn">Proceed</button>
-
-
-  </div>
-
-</form>
-
+<div>
+  <h1>Checkout</h1>
 </div>
 
 
+
+  <div class="row">
+    <div class="col-75">
+      <div class="container">
+        <form method="post" action="/addSubscriptionForUser" onsubmit="return validateBillingAddress()">
+
+          <div class="row">
+            <div class="col-50">
+              <h3>Billing Address</h3>
+              <p>
+                <label for="fullName" ><i class="fa fa-user"></i> Full Name</label>
+                <input type="text"  th:value="${fullName}" id="fullName" name="fullName" placeholder="Toby Zedomi">
+              <div class="message" th:text="${message1}"></div>
+              <span id="fullName-error" class="error-message"></span>
+              </p>
+              <label for="email"><i class="fa fa-envelope"></i> Email</label>
+              <input type="text" th:value="${#ctx.session.loggedInUser.getEmail()}" id="email" name="email" placeholder="john@example.com">
+              <div class="message" th:text="${messageEmail}"></div>
+              <label for="address"><i class="fa fa-address-card-o"></i> Address</label>
+              <input type="text" th:value="${address}" id="address" name="address" placeholder="542 W. 15th Street">
+              <div class="message" th:text="${message2}"></div>
+              <label for="city"><i class="fa fa-institution"></i> City</label>
+              <input type="text" th:value="${city}" id="city" name="city" placeholder="Dublin">
+              <div class="message" th:text="${message3}"></div>
+
+              <div class="row">
+                <div class="col-50">
+                  <label for="county">County</label>
+                  <select th:value="${county}" name="county" id="county" >
+                    <option value="antrim">Antrim</option>
+                    <option value="armagh">Armagh</option>
+                    <option value="carlow">Carlow</option>
+                    <option value="cavan">Cavan</option>
+                    <option value="clare">Clare</option>
+                    <option value="cork">Cork</option>
+                    <option value="derry">Derry</option>
+                    <option value="donegal">Donegal</option>
+                    <option value="down">Down</option>
+                    <option value="dublin">Dublin</option>
+                    <option value="fermanagh">Fermanagh</option>
+                    <option value="galway">Galway</option>
+                    <option value="kerry">Kerry</option>
+                    <option value="kildare">Kildare</option>
+                    <option value="kilkenny">Kilkenny</option>
+                    <option value="laois">Laois</option>
+                    <option value="leitrim">Leitrim</option>
+                    <option value="limerick">Limerick</option>
+                    <option value="longford">Longford</option>
+                    <option value="louth">Louth</option>
+                    <option value="mayo">Mayo</option>
+                    <option value="meath">Meath</option>
+                    <option value="monaghan">Monaghan</option>
+                    <option value="offaly">Offaly</option>
+                    <option value="roscommon">Roscommon</option>
+                    <option value="sligo">Sligo</option>
+                    <option value="tipperary">Tipperary</option>
+                    <option value="tyrone">Tyrone</option>
+                    <option value="waterford">Waterford</option>
+                    <option value="westmeath">Westmeath</option>
+                    <option value="wexford">Wexford</option>
+                    <option value="wicklow">Wicklow</option>
+                  </select>
+                  <div class="message" th:text="${message4}"></div>
+                </div>
+                <div class="col-50">
+                  <label for="postcode">PostCode</label>
+                  <input type="text" th:value="${postcode}" id="postcode" name="postcode" placeholder="10001">
+                  <div class="message" th:text="${message5}"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-50">
+              <h3>Payment</h3>
+              <label for="fname">Accepted Cards</label>
+              <div class="icon-container">
+                <i class="fa fa-cc-visa" style="color:navy;"></i>
+                <i class="fa fa-cc-amex" style="color:blue;"></i>
+                <i class="fa fa-cc-mastercard" style="color:red;"></i>
+                <i class="fa fa-cc-discover" style="color:orange;"></i>
+              </div>
+              <label for="cardName">Name on Card</label>
+              <input type="text" th:value="${cardName}" id="cardName" name="cardName" placeholder="John More Doe">
+              <div class="message" th:text="${message6}"></div>
+              <label for="cardNumber">Credit card number</label>
+              <input type="text" th:value="${cardNumber}" id="cardNumber" name="cardNumber" placeholder="1111-2222-3333-4444">
+              <div class="message" th:text="${message7}"></div>
+              <label for="expmonth">Exp Month:</label>
+              <div class="date-field">
+                <div class="month">
+                  <select th:value="${Month}" name="Month" id="Month">
+                    <option value="january">January</option>
+                    <option value="february">February</option>
+                    <option value="march">March</option>
+                    <option value="april">April</option>
+                    <option value="may">May</option>
+                    <option value="june">June</option>
+                    <option value="july">July</option>
+                    <option value="august">August</option>
+                    <option value="september">September</option>
+                    <option value="october">October</option>
+                    <option value="november">November</option>
+                    <option value="december">December</option>
+                  </select>
+                  <div class="message" th:text="${message8}"></div>
+                </div>
+
+                <!--<div class="row">-->
+                <br>
+                <div class="col-50">
+                  <label for="expyear">Exp Year:</label>
+                  <div class="Year" >
+                    <select th:value="${Year}" name="Year" id="Year" style="margin-right: 50px">
+                      <option value="2025">2025</option>
+                      <option value="2026">2026</option>
+                      <option value="2027">2027</option>
+                      <option value="2028">2028</option>
+                      <option value="2029">2029</option>
+                      <option value="2030">2030</option>
+                      <option value="2031">2031</option>
+                      <option value="2032">2032</option>
+                      <option value="2033">2033</option>
+                    </select>
+                    <div class="message" th:text="${message9}"></div>
+                  </div>
+                </div>
+                <br>
+                <!--</div>-->
+                <div class="col-50">
+                  <label for="cvv">CVV</label>
+                  <input type="text" th:value="${cvv}" id="cvv" name="cvv" placeholder="352">
+                  <div class="message" th:text="${message10}"></div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <input type="submit"  value="Purchase Subscription" class="continueButton" onclick="clicked(event)">
+        </form>
+      </div>
+    </div>
+
+
+  </div>
+
+
+
+<!--JavScript Confirmation -->
 <script>
 
-  function validateSubscription() {
+
+  function clicked(e)
+  {
+    if(!confirm('Are you sure, you want to purchase this?')) {
+      e.preventDefault();
+    }
+  }
+</script>
+
+<script>
+  function validateBillingAddress() {
 
 
+    const fullName = document.getElementById("fullName").value;
+    const email = document.getElementById("email").value;
+    const address = document.getElementById("address").value;
+    const city = document.getElementById("city").value;
+    const county = document.getElementById("county").value;
+    const postcode = document.getElementById("postcode").value;
+    const cardName = document.getElementById("cardName").value;
     const cardNumber = document.getElementById("cardNumber").value;
-    const month = document.getElementById("Month").value;
+    const Month = document.getElementById("Month").value;
     const year = document.getElementById("Year").value;
     const cvv = document.getElementById("cvv").value;
 
 
 
+
+
+
+    const fullNameErr = document.getElementById("fullName-error");
+    const emailErr = document.getElementById("email-error");
+    const addressErr = document.getElementById("address-error");
+    const cityErr = document.getElementById("city-error");
+    const countyErr = document.getElementById("county-error");
+    const postCodeErr = document.getElementById("postCode-error");
+    const cardNameErr = document.getElementById("cardName-error");
     const cardNumberErr = document.getElementById("cardNumber-error");
-    const monthErr = document.getElementById("month-error");
+    const monthError = document.getElementById("month-error");
     const yearErr = document.getElementById("year-error");
     const cvvErr = document.getElementById("cvv-error");
 
-
+    fullNameErr.textContent = "";
+    emailErr.textContent = "";
+    addressErr.textContent = "";
+    cityErr.textContent = "";
+    countyErr.textContent = "";
+    postCodeErr.textContent = "";
+    cardNameErr.textContent = "";
     cardNumberErr.textContent = "";
-    monthErr.textContent = "";
+    monthError.textContent = "";
     yearErr.textContent = "";
     cvvErr.textContent = "";
 
 
-    const cardNumberRegex = /^(?:4[0-9]{12}(?:[0-9]{3})?)$/;
-    const cvvRegex = /^[0-9]{3,4}$/;
-
+    const fullNameRegex = /^[a-zA-Z]{3,25}$/;
+    const cardNameRegex = /^[a-zA-Z0-9]{3,25}$/;
 
     let valid = true;
 
-    if (cardNumber === ""){
-      cardNumberErr.textContent = "CardNumber is left empty";
+    if (fullName === ""){
+      fullNameErr.textContent = "Full Name is left empty";
       valid = false
     }
-    else if (!cardNumberRegex.test(cardNumber)){
-      cardNumberErr.textContent = "Card Number must be a valid Visa credit card number";
+    else if (!fullNameRegex.test(fullName)){
+      fullNameErr.textContent = "Username must be between 3-25 characters (letters only), try register again";
       valid = false
     }
+    /*
+        if(displayName === ""){
+          displayNameErr.textContent = "Display Name was left empty, try register again";
+          valid = false
+        }
+        else if(!displayNameRegex.test(displayName)){
+          displayNameErr.textContent = "Display Name has to be between 3-25 characters (letters and numbers only), try register again";
+          valid = false
+        }
+        if (email === ""){
+          emailErr.textContent = "Email was left empty, try register again";
+          valid = false
+        }
 
-    if (month === ""){
-      monthErr.textContent = "Month is left empty"
-      valid = false;
-    }
+        if(password === ""){
+          passwordErr1.textContent = "Password was left empty, try register again";
+          valid = false
+        } else if (!passwordRegex.test(password)){
+          passwordErr1.textContent = "Password must be within 7-70 characters, one uppercase letter, one lowercase letter, one number and one special character";
+          valid = false
+        }
+        if (password2 === ""){
+          passwordErr2.textContent = "Confirm Password was left empty, try register again";
+          valid = false
+        }else if (password != password2){
+          passwordErr2.textContent = "Password did not match, try register again";
+          valid = false
+        }
 
-    if (year === ""){
-      yearErr.textContent = "Year is left empty";
-      valid = false;
-    }
+        const today = new Date();
+        const bDate = new Date(dateOfBirth);
+        const age = today.getFullYear() - bDate.getFullYear();
+        const month = today.getMonth() - bDate.getMonth();
+        if (dateOfBirth === ""){
+          dateOfBirthErr.textContent = "Date Of Birth was left empty, try register again";
+          valid = false
+        } else if (age < 12 || (age === 12 && month < 0)) {
+          document.getElementById("dateOfBirth-error").textContent =
+                  "You must be at least 12 years old.";
+          valid = false;
+        }
 
-    if (cvv === ""){
-      cvvErr.textContent = "Cvv number is left empty";
-      valid = false;
-    }else if (!cvvRegex.test(cvv)){
-      cvvErr.textContent = "Cvv number has to be 3 or 4 digits"
-      valid = false;
-    }
+     */
 
     if (valid){
-      // alert("Login Attempt")
+      // alert("Register Completed")
     }else{
       return false;
     }
 
   }
 
+
+  function resetForm() {
+    document.getElementById("username-error").textContent = "";
+    document.getElementById("displayName-error").textContent = "";
+    document.getElementById("email-error").textContent = "";
+    document.getElementById("password-error").textContent = "";
+    document.getElementById("password2-error").textContent = "";
+    document.getElementById("dateOfBirth-error").textContent = "";
+  }
+
 </script>
-
-
 </body>
 </html>
