--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -7,22 +7,165 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <title>Success!</title>
-<style>
-    body{
-        margin: 0;
-    }
+    <style>
+        .container h2{
+            color: black;
+        }
 
-    #background{
-        background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
-        height: 100vh;
-        width: 100%;
-        background-size: cover;
-        background-position: center center;
-        position: fixed;
-        top: 0;
-        z-index: -1;
-    }
-</style>
+
+        body{
+            margin: 0;
+        }
+
+        #background{
+            background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+            height: 100vh;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            position: fixed;
+            top: 0;
+            z-index: -1;
+        }
+    </style>
+
+    <style>
+
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+
+        .container{
+            width: 100%;
+            min-height: 100vh;
+            /* background: #5c539d;*/
+        }
+
+        .container h2{
+            color: #fff;
+            font-size: 32px;
+            padding: 50px 0;
+            text-align: center;
+
+        }
+
+        .price-row{
+            width: 90%;
+            max-width: 1100px;
+            margin: auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-gap: 25px;
+        }
+
+        .price-col{
+            background: black;
+            padding: 10% 15%;
+            border-radius: 10px;
+            color: #fff;
+            text-align: center;
+            outline-color: darkred;
+            outline-style: solid;
+            transition: transform .5s;
+        }
+
+        .price-col:hover{
+            transform: scale(1.05);
+        }
+
+        .price-col p {
+            font-size: 22px;
+
+        }
+
+        .price-col h3{
+            font-size: 44px;
+            margin: 20px 0 40px;
+            font-weight: 500;
+        }
+
+        .price-col h3 span{
+            font-size: 16px;
+
+        }
+
+        .price-col ul{
+            text-align: left;
+            margin: 20px 0;
+            color: #ddd;
+            list-style: none;
+        }
+
+        .price-col ul li{
+            margin: 15px 0;
+        }
+
+        .price-col ul li::before{
+            content: '\2022';
+            color: #e33058;
+            font-weight: bold;
+            margin-right: 8px;
+        }
+
+        .price-col button{
+            width: 100%;
+            padding: 14px 0;
+            background: transparent;
+            color: #fff;
+            font-size: 15px;
+            border: 1px solid #e33058;
+            border-radius: 6px;
+            margin-top: 30px;
+            cursor: pointer;
+            transition: background 0.5s;
+        }
+
+        .price-col button:hover{
+            background: #e33058;
+        }
+
+
+        p, label, input, li, ul{
+
+            font-family: poppins;
+            font-weight: bold;
+            font-size: 15px;
+            color: white;
+        }
+
+        h3, h2{
+            font-family: poppins;
+            font-weight: bold;
+            color: white;
+        }
+
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+            font-family: poppins;
+        }
+
+        .center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            margin-top: 300px;
+        }
+
+
+    </style>
 
 </head>
 <body>
@@ -32,17 +175,20 @@
 
     <div id="background"></div>
 
-<div class="container">
+    <div>
+        <h1 style="margin-top: 50px">Choose your Subscription Plan</h1>
+    </div>
+
+<div class="container" style="margin-top: 100px;">
 
 
-<h2 style="font-weight: bold">Choose your Subscription Plan</h2>
+
     <div class="price-row">
         <div class="price-col">
             <p>Standard</p>
             <h3>£9.99<span>/ yearly</span></h3>
             <ul>
                 <li>5 percent discount on purchased movies</li>
-                <li>Have access to purchase the cheapest merch</li>
                 <li>A Yearly Subscription</li>
             </ul>
             <a th:href="@{/SubPlanStandard(subscriptionPlanId=${1})}"> <button>Choose Plan</button></a>
@@ -52,8 +198,7 @@
             <p>Premium</p>
             <h3>£14.99<span>/ yearly</span></h3>
             <ul>
-                <li>5 percent discount on purchased movies</li>
-                <li>Have access to purchase the cheapest merch</li>
+                <li>15 percent discount on purchased movies</li>
                 <li>A Yearly Subscription</li>
             </ul>
             <a th:href="@{/SubPlanStandard(subscriptionPlanId=${2})}"> <button>Choose Plan</button></a>
@@ -64,7 +209,6 @@
             <h3>£4.99<span>/ yearly</span></h3>
             <ul>
                 <li>5 percent discount on purchased movies</li>
-                <li>Have access to purchase the cheapest merch</li>
                 <li>75 percent cheaper than Premium Plan</li>
             </ul>
             <a th:href="@{/SubPlanStandard(subscriptionPlanId=${3})}"> <button>Choose Plan</button></a>
@@ -75,7 +219,11 @@
 </div>
 
 
-    <a href ="/registerSuccessUser" style="align-items: center"><button type="button" class="btn btn-primary">Skip this</button></a>
+    <div class="center">
+        <a href="/registerSuccessUser"><button type="button" class="btn btn-danger" title="Store">Skip This</button></a>
+    </div>
+
+    <!--<a href ="/registerSuccessUser" style="align-items: center"><button type="button" class="btn btn-primary">Skip this</button></a>-->
 
 </div>
 <br>
