--- a/src/main/resources/templates/subscription_index.html
+++ b/src/main/resources/templates/subscription_index.html
@@ -32,6 +32,143 @@
     }
   </style>
 
+  <style>
+
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+
+    .container{
+      width: 100%;
+      min-height: 100vh;
+      /* background: #5c539d;*/
+    }
+
+    .container h2{
+      color: #fff;
+      font-size: 32px;
+      padding: 50px 0;
+      text-align: center;
+
+    }
+
+    .price-row{
+      width: 90%;
+      max-width: 1100px;
+      margin: auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-gap: 25px;
+    }
+
+    .price-col{
+      background: black;
+      padding: 10% 15%;
+      border-radius: 10px;
+      color: #fff;
+      text-align: center;
+      outline-color: darkred;
+      outline-style: solid;
+      transition: transform .5s;
+    }
+
+    .price-col:hover{
+      transform: scale(1.05);
+    }
+
+    .price-col p {
+      font-size: 22px;
+
+    }
+
+    .price-col h3{
+      font-size: 44px;
+      margin: 20px 0 40px;
+      font-weight: 500;
+    }
+
+    .price-col h3 span{
+      font-size: 16px;
+
+    }
+
+    .price-col ul{
+      text-align: left;
+      margin: 20px 0;
+      color: #ddd;
+      list-style: none;
+    }
+
+    .price-col ul li{
+      margin: 15px 0;
+    }
+
+    .price-col ul li::before{
+      content: '\2022';
+      color: #e33058;
+      font-weight: bold;
+      margin-right: 8px;
+    }
+
+    .price-col button{
+      width: 100%;
+      padding: 14px 0;
+      background: transparent;
+      color: #fff;
+      font-size: 15px;
+      border: 1px solid #e33058;
+      border-radius: 6px;
+      margin-top: 30px;
+      cursor: pointer;
+      transition: background 0.5s;
+    }
+
+    .price-col button:hover{
+      background: #e33058;
+    }
+
+
+    p, label, input, li, ul{
+
+      font-family: poppins;
+      font-weight: bold;
+      font-size: 15px;
+      color: white;
+    }
+
+    h3, h2{
+      font-family: poppins;
+      font-weight: bold;
+      color: white;
+    }
+
+    h1{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: white;
+      font-weight: bold;
+      -webkit-text-stroke: 1px darkred;
+      font-family: poppins;
+    }
+
+    .message{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: red;
+      font-weight: bold;
+      margin-bottom: 50px;
+      font-family: poppins;
+    }
+
+  </style>
+
 </head>
 <body>
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
@@ -40,16 +177,21 @@
 
 <div th:if="${#ctx.session.loggedInUser != null}">
 
-  <div class="container">
+  <div>
+    <h1 style="margin-top: 50px">Choose your Subscription Plan</h1>
+  </div>
 
-    <h2 style="font-weight: bold">Choose your Subscription Plan</h2>
+  <div id="message" class="message" th:text="${message}" style="color:red"></div>
+
+  <div class="container" style="margin-top: 100px;">
+
+
     <div class="price-row">
       <div class="price-col">
         <p>Standard</p>
         <h3>£9.99<span>/ yearly</span></h3>
         <ul>
           <li>5 percent discount on purchased movies</li>
-          <li>Have access to purchase the cheapest merch</li>
           <li>A Yearly Subscription</li>
         </ul>
         <a th:href="@{/SubPlanStandardPart2(subscriptionPlanId=${1})}"> <button>Choose Plan</button></a>
@@ -59,8 +201,7 @@
         <p>Premium</p>
         <h3>£14.99<span>/ yearly</span></h3>
         <ul>
-          <li>5 percent discount on purchased movies</li>
-          <li>Have access to purchase the cheapest merch</li>
+          <li>15 percent discount on purchased movies</li>
           <li>A Yearly Subscription</li>
         </ul>
         <a th:href="@{/SubPlanStandardPart2(subscriptionPlanId=${2})}"> <button>Choose Plan</button></a>
@@ -71,7 +212,6 @@
         <h3>£4.99<span>/ yearly</span></h3>
         <ul>
           <li>5 percent discount on purchased movies</li>
-          <li>Have access to purchase the cheapest merch</li>
           <li>75 percent cheaper than Premium Plan</li>
         </ul>
         <a th:href="@{/SubPlanStandardPart2(subscriptionPlanId=${3})}"> <button>Choose Plan</button></a>
